# uniffi-rs

./: Cargo.toml
examples/arithmetic/: build.rs
examples/callbacks/: build.rs
examples/custom-types/: build.rs
examples/geometry/: build.rs
examples/rondpoint/: build.rs
examples/sprites/: build.rs
examples/todolist/: build.rs
fixtures/coverall/: build.rs
fixtures/ext-types/guid/: build.rs
fixtures/ext-types/lib/: build.rs
fixtures/ext-types/uniffi-one/: build.rs
fixtures/external-types/lib/: build.rs
fixtures/keywords/kotlin/: build.rs
fixtures/multiple-definitions/: Cargo.toml
fixtures/multiple-definitions/bar/: Cargo.toml
fixtures/multiple-definitions/bar/src/: lib.rs
fixtures/multiple-definitions/foo/: Cargo.toml
fixtures/multiple-definitions/foo/src/: lib.rs
fixtures/multiple-definitions/src/: lib.rs
fixtures/multiple-definitions/tests/: test_generated_bindings.rs
fixtures/proc-macro/: build.rs
fixtures/reexport-scaffolding-macro/: Cargo.toml
fixtures/regressions/kotlin-experimental-unsigned-types/: build.rs
fixtures/simple-fns/: build.rs
fixtures/simple-iface/: build.rs
fixtures/swift-bridging-header-compile/: Cargo.toml
fixtures/swift-omit-labels/: build.rs
fixtures/uniffi-fixture-time/: build.rs
uniffi/src/: cli.rs  lib.rs
uniffi_bindgen/: Cargo.toml
uniffi_bindgen/src/: lib.rs  library_mode.rs
uniffi_bindgen/src/bindings/: mod.rs
uniffi_build/src/: lib.rs
uniffi_macros/: Cargo.toml
uniffi_macros/src/: lib.rs  util.rs
uniffi_meta/: Cargo.toml
uniffi_testing/: Cargo.toml
uniffi_udl/: Cargo.toml
(+9 files in other folders)
